// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal/> Snapshot Modal 1`] = `
<div
  class="modal  "
  data-testid="modal"
  role="dialog"
>
  <div
    class="modal__body"
  >
    <div
      class="modal__body-container"
    />
  </div>
  <div
    class="modal__overlay"
  />
</div>
`;

exports[`<Modal/> Snapshot Modal with header 1`] = `
<div
  class="modal  "
  data-testid="modal"
  role="dialog"
>
  <div
    class="modal__body"
  >
    <div
      class="modal__body-container"
    >
      <header
        class="modal__header"
      >
        <h1>
          Engagement Process
           
          <label>
            Abandoned
          </label>
        </h1>
        <h4>
          2019 Fall Oncology Advisory Board
        </h4>
        <button
          data-testid="btn-close-modal"
        >
          <img
            alt="x"
            src="close-icon.png"
          />
        </button>
      </header>
    </div>
  </div>
  <div
    class="modal__overlay"
  />
</div>
`;
